--- a/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
@@ -3,43 +3,41 @@
 <property name="name" value="form-modeling.test-forms-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="model_field1" type="InputText" id="1609873935">
+<field position="3" name="pojo_header" type="Subform" id="268249202">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field1 (model)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="model_in/field1"/>
-<property name="outputBinding" value="model_out/field1"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="1" name="model_field2" type="InputText" id="2005569805">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;field2 (model)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="model_in/field2"/>
-<property name="outputBinding" value="model_out/field2"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
-<field position="2" name="model_header" type="Subform" id="1456317471">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (model)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="inputBinding" value="model_in/header"/>
-<property name="outputBinding" value="model_out/header"/>
+<property name="inputBinding" value="pojo_in/header"/>
+<property name="outputBinding" value="pojo_out/header"/>
 <property name="defaultSubform" value="HeaderForm.form"/>
 <property name="fieldClass" value="java.lang.Object"/>
 </field>
-<field position="3" name="197472606" type="Subform" id="197472606">
+<field position="0" name="pojo_orderDate" type="InputText" id="1510850259">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;My Pojo Formquot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
-<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;enquot;,quot;orderDate (pojo)quot;"/>
 <property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in"/>
-<property name="outputBinding" value="pojo_out"/>
-<property name="defaultSubform" value="MyPojoForm.form"/>
-<property name="fieldClass" value="java.lang.Object"/>
+<property name="inputBinding" value="pojo_in/orderDate"/>
+<property name="outputBinding" value="pojo_out/orderDate"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="1" name="pojo_orderId" type="InputText" id="1238553942">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;orderId (pojo)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="pojo_in/orderId"/>
+<property name="outputBinding" value="pojo_out/orderId"/>
+<property name="fieldClass" value="java.lang.String"/>
+</field>
+<field position="2" name="pojo_quantity" type="InputTextPrimitiveInteger" id="1141715033">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;enquot;,quot;quantity (pojo)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="pojo_in/quantity"/>
+<property name="outputBinding" value="pojo_out/quantity"/>
+<property name="fieldClass" value="int"/>
 </field>
 <dataHolder inputId="model_in" name="#E9E371" type="dataModelerEntry" outId="model_out" value="keypartner.form_modeling.MyModel" id="model"/>
 <dataHolder supportedType="className" inputId="pojo_in" name="#E9E371" type="dataModelerEntry" outId="pojo_out" value="keypartner.form_modeling.MyPojo" id="pojo"/>
