--- a/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
+++ b/form-modeling/src/main/resources/keypartner/form_modeling/form-modeling.test-forms-taskform.form
@@ -3,16 +3,9 @@
 <property name="name" value="form-modeling.test-forms-taskform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="pojo_orderDate" type="InputText" id="1510850259">
-<property name="fieldRequired" value="false"/>
-<property name="label" value="quot;enquot;,quot;orderDate (pojo)quot;"/>
-<property name="readonly" value="false"/>
-<property name="inputBinding" value="pojo_in/orderDate"/>
-<property name="outputBinding" value="pojo_out/orderDate"/>
-<property name="fieldClass" value="java.lang.String"/>
-</field>
 <field position="1" name="pojo_orderId" type="InputText" id="1238553942">
 <property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
 <property name="label" value="quot;enquot;,quot;orderId (pojo)quot;"/>
 <property name="readonly" value="false"/>
 <property name="inputBinding" value="pojo_in/orderId"/>
@@ -21,7 +14,7 @@
 </field>
 <field position="2" name="pojo_header" type="Subform" id="268249202">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;header (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
@@ -51,6 +44,17 @@
 <property name="expanded" value="false"/>
 <property name="enableTableEnterData" value="false"/>
 <property name="fieldClass" value="java.util.List"/>
+</field>
+<field position="0" name="pojo_orderDate" type="InputShortDate" id="1821255803">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;orderDate (pojo)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="pojo_in/orderDate"/>
+<property name="outputBinding" value="pojo_out/orderDate"/>
+<property name="fieldClass" value="java.util.Date"/>
 </field>
 <dataHolder inputId="model_in" name="#E9E371" type="dataModelerEntry" outId="model_out" value="keypartner.form_modeling.MyModel" id="model"/>
 <dataHolder supportedType="className" inputId="pojo_in" name="#E9E371" type="dataModelerEntry" outId="pojo_out" value="keypartner.form_modeling.MyPojo" id="pojo"/>
